1.21.6 update
Also removed unused Particle effects